<resources>
    <string name="app_name">My Stories</string>
    <string name="settings">Settings</string>
    <string name="mainlist">List</string>
    <string name="menu">Menu</string>
    <string name="add">Add</string>
    <string name="add_">Add</string>
    <string name="hello_blank_fragment">Hello!</string>
    <string name="title_hint">Title:</string>
    <string name="description_hint">Description:</string>
    <string name="save">Save</string>
    <string name="bold">Bold</string>
    <string name="color">Color</string>
    <string name="category">Category 1</string>
    <string name="content_">Content:</string>
    <string name="content">Content (Here you write the main text of your work. The content field expands as the text is filled in.):</string>
    <string name="book_title">Book title:</string>
    <string name="short_description">Short description:</string>
    <string name="start_a_new_chapter">Go to the list of chapters</string>
    <string name="characters_and_heroes_of_the_book">Go to the list of heroes</string>
    <string name="the_world_and_locations">Go to the list of locations</string>
    <string name="go_back_to_the_list_of_books">Go back to the list of books</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="to_create_a_new_chapter_click_on_the_quot_add_quot_button_in_the_lower_right_corner">To create a new chapter, click on the \"Add\" button in the lower right corner.\t\nIf you have created a chapter and it does not appear in the \"List\", click on the list button located in the center of the lower menu of the screen.</string>
    <string name="list_of_chapters">List of chapters</string>
    <string name="to_create_a_new_book_click_on_the_quot_add_quot_button_in_the_lower_right_corner">To create a new book, click on the \"Add\" button in the lower right corner.\t\nIf you have created a book and it does not appear in the list, click on the \"List\" button located in the center of the lower menu of the screen.</string>
    <string name="list_of_books">List of books</string>
    <string name="go_to_the_list_of_books">Go to the list of books</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="delete_a_book">Delete a book</string>
    <string name="sure_delete_book">Are you sure you want to delete the book?</string>
    <string name="sure_save_book">Are you sure you want to save the book?</string>
    <string name="sure_save_chapter">Are you sure you want to save the chapter?</string>
    <string name="delete_a_chapter">Delete a chapter</string>
    <string name="sure_delete_chapter">Are you sure you want to delete the chapter?</string>
    <string name="chapter_title">Chapter title:</string>
    <string name="the_plot_of_the_book">The plot of the book</string>
    <string name="the_theme_of_the_book">The theme of the book</string>
    <string name="plot_edit_1">The beginning of the story. Briefly describe how your story begins (description of the world, action scene, etc.):</string>
    <string name="plot_edit_2">The appearance of the characters. Briefly outline the theme of the story, describe the relationships of the characters:</string>
    <string name="plot_edit_3">The reasons (prerequisites) for the development of the plot in this direction:</string>
    <string name="plot_edit_4">The development of the main plot along with the secondary ones, the development of relationships between the characters:</string>
    <string name="plot_edit_5">The conflict is becoming more serious, now everyone knows about it:</string>
    <string name="plot_edit_6">The characters strive to resolve the conflict, personal growth, and awareness of the problem:</string>
    <string name="plot_edit_7">The beginning of solving the problem:</string>
    <string name="plot_edit_8">Ending:</string>
    <string name="sure_save_plot">Save the plot?</string>
    <string name="go_to_the_list_of_races">Go to the list of races</string>
    <string name="go_to_the_list_of_terms">Go to the list of terms</string>
    <string name="heroes">Heroes</string>
    <string name="theme">Theme</string>
    <string name="plot">Plot</string>
    <string name="chapters">Chapters</string>
    <string name="locations">Locations</string>
    <string name="peoples">Peoples</string>
    <string name="terms">Terms</string>
    <string name="books">Books</string>
    <string name="the_serial_number_in_the_table_of_contents">The serial number of the chapter in the table of contents:</string>
    <string name="general">General</string>
    <string name="chose_note_style">Chose style</string>
    <string name="chose_time_format">Chose time format</string>
    <string name="remove_ads">Remove ads</string>
    <string name="remove_ads_summary">Remove all ads from this app</string>
    <string name="theme_settings">Theme settings</string>
    <string name="chose_theme">Chose theme</string>
    <string name="note_text_settings">Text settings</string>
    <string name="text_size">Chose text size</string>
    <string name="title_text_size">Title text size</string>
    <string name="content_text_size">Content text size</string>
    <string name="share">Share</string>
    <string name="theme_edit_1">The theme of the work:</string>
    <string name="theme_edit_2">The main conflict:</string>
    <string name="theme_edit_3">Side conflicts:</string>
    <string name="theme_edit_4">Ways to resolve the conflict:</string>
    <string name="theme_edit_5">How the main character changes throughout the story:</string>
    <string name="theme_edit_6">How other characters change throughout the story:</string>
    <string name="theme_edit_7">Positive points and ideas:</string>
    <string name="theme_edit_8">Negative points and ideas:</string>
    <string name="sure_save_theme">Do you want to save the theme of the work?</string>
    <string name="list_of_heroes">List of heroes</string>
    <string name="to_create_a_new_hero">To create a new hero click on the \"Add\" button in the lower right corner\t\nIf you have created a character and it does not appear in the list, click on the \"List\" button located in the center of the lower menu of the screen.</string>
    <string name="delete_a_hero">Delete a hero</string>
    <string name="sure_delete_hero">Are you sure you want to delete the hero?</string>
    <string name="sure_save_hero">Are you sure you want to save the hero?</string>
    <string name="hero_name">Character\'s name, nickname (if any):</string>
    <string name="hero_edit_2">Gender, age:</string>
    <string name="hero_edit_3">Race, nationality, type:</string>
    <string name="hero_edit_4">Describe the character\'s face: eye color, nose and lip shape, cheekbones, eyebrows, etc.:</string>
    <string name="hero_edit_5">Skin color:</string>
    <string name="hero_edit_6">Hairstyle, hair color:</string>
    <string name="hero_edit_7">Physique, height, weight (and in this regard, the impression of others about the character):</string>
    <string name="hero_edit_8">Features of clothing, accessories (and in this regard, the impression of others about the character):</string>
    <string name="hero_edit_9">Attractive and repulsive sides of the character, weaknesses and strengths of the character, habits, hobbies, complexes:</string>
    <string name="hero_edit_10">The manner of speech (and in this regard, the impression of others about the character):</string>
    <string name="hero_edit_11">The character\'s behavior in the family and in society:</string>
    <string name="hero_edit_12">Upbringing, education, profession:</string>
    <string name="hero_edit_13">The trials that befell the character:</string>
    <string name="hero_edit_14">Character\'s dreams and ideals, goals and motivations:</string>
    <string name="hero_edit_15">How the character appears in the story, his role in the story, how the character leaves the story:</string>
    <string name="hero_edit_16">How the character changes throughout the story (personal growth or decline):</string>
    <string name="hero_edit_17">The character\'s family, relationships within the family, how they spend their time:</string>
    <string name="hero_edit_18">The character\'s friends, relationships, what kind of influence they have on each other, how they spend their time:</string>
    <string name="hero_edit_19">The enemies of the character, the relationship, what influence they have on each other, how they spend their time:</string>
    <string name="hero_edit_20">Romantic relationships:</string>
    <string name="hero_edit_21">Character\'s Fears:</string>
    <string name="term_title">The name of the term:</string>
    <string name="term_content">Interpretation of the term:</string>
    <string name="list_of_locations">List of locations</string>
    <string name="to_create_a_new_location">To create a new location click on the \"Add\" button in the lower right corner.\t\nIf you have created a location and it does not appear in the list, click on the \"List\" button located in the center of the lower menu of the screen.</string>
    <string name="list_of_peoples">List of peoples</string>
    <string name="to_create_a_new_people">To create a new people click on the \"Add\" button in the lower right corner.\t\nIf you have created a nation and it does not appear in the list, click on the \"List\" button located in the center of the lower menu of the screen.</string>
    <string name="list_of_terms">List of terms</string>
    <string name="comments_text_size">Comments text size</string>
    <string name="ad_cat1">Publications</string>
    <string name="ad_my_ads">My published books</string>
    <string name="ad_cat2">Account</string>
    <string name="ac_sign_up">Sign up</string>
    <string name="ac_sign_in">Sign in</string>
    <string name="ac_sign_out">Sign out</string>
    <string name="ad_my_books">My books</string>
    <string name="ad_my_new_ads">Publish a book</string>
    <string name="ad_other_ads">Published books</string>
    <string name="ad_favourites">Favourites</string>
    <string name="ad_cat0">Books on this device</string>
    <string name="font_family_content">Font family for content</string>
    <string name="font_family_title">Font family for headings</string>
    <string name="font_family_comment">Font family for comments</string>
    <string name="font_family_list">Font family for lists</string>
    <string name="font_family_button">Font family for buttons</string>
    <string name="theme_settings_no">Theme customization is only possible from the \"Book List\" page.</string>
    <string name="changing_text_comments">Sample text in the comments.</string>
    <string name="changing_text_headings">Sample text in the headings.</string>
    <string name="changing_text_content">Sample text in the content.</string>
    <string name="changing_text_lists">Sample text in the lists.</string>
    <string name="changing_text_buttons">Sample text on the buttons.</string>
    <string name="save_to_pdf">Save to PDF</string>
    <string name="save_to_docx">Save to DOCX</string>
    <string name="save_to_txt">Save to TXT</string>
    <string name="extract_from_file">Extract text from a PDF file</string>
    <string name="extract_from_file_txt">Extract text from a TXT file</string>
    <string name="extract_from_file_docx">Extract text from a DOCX file</string>
    <string name="work_offline">Work without registration</string>
    <string name="profile">Profile</string>
    <string name="background_selection">Background selection</string>
    <string name="thanks">Thanks</string>
    <string name="about_app">About the app</string>
</resources>