<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"
    >

    <item android:title="@string/ad_cat0">
        <menu>
            <item
                android:id="@+id/id_my_books"
                android:title="@string/ad_my_books"
                />
        </menu>
    </item>
    <item android:title="@string/ad_cat1">
        <menu>
            <item
                android:id="@+id/id_my_new_ads"
                android:title="@string/ad_my_new_ads"
                />
            <item
                android:id="@+id/id_my_ads"
                android:title="@string/ad_my_ads"
                />

            <item
                android:id="@+id/id_other_ads"
                android:title="@string/ad_other_ads"
                />
            <item
                android:id="@+id/id_favourites"
                android:title="@string/ad_favourites"
                />
        </menu>
    </item>
    <item android:title="@string/ad_cat2">
        <menu>
            <item
                android:id="@+id/profile"
                android:title="@string/profile"
                />
            <item
                android:id="@+id/id_sign_up"
                android:title="@string/ac_sign_up"
                />
            <item
                android:id="@+id/id_sign_in"
                android:title="@string/ac_sign_in"
                />
            <item
                android:id="@+id/id_sign_in_anonymous"
                android:title="@string/work_offline"
                />
            <item
                android:id="@+id/id_sign_out"
                android:title="@string/ac_sign_out"
                />
        </menu>
    </item>
    <item android:title="@string/about_app">
        <menu>
            <item
                android:id="@+id/thanks"
                android:title="@string/thanks"
                />
        </menu>
    </item>

</menu>