<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/id_save"
        android:title="@string/save"
        android:icon="@drawable/ic_save"
        android:orderInCategory="1"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/id_share"
        android:title="@string/share"
        android:icon="@drawable/ic_share"
        android:orderInCategory="2"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/id_pdf"
        android:title="@string/save_to_pdf"
        android:icon="@drawable/ic_pdf"
        android:orderInCategory="3"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/id_txt"
        android:title="@string/save_to_txt"
        android:icon="@drawable/txt_file____"
        android:orderInCategory="4"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/id_docx"
        android:title="@string/save_to_docx"
        android:icon="@drawable/ic_docx"
        android:orderInCategory="5"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/id_extract"
        android:title="@string/extract_from_file"
        android:icon="@drawable/pdf_ext"
        android:orderInCategory="6"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/id_extract_txt"
        android:title="@string/extract_from_file_txt"
        android:icon="@drawable/ic_upload_file"
        android:orderInCategory="7"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/id_extract_docx"
        android:title="@string/extract_from_file_docx"
        android:icon="@drawable/ic_ect_docx"
        android:orderInCategory="7"
        app:showAsAction="ifRoom"
        />
</menu>