<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:custom="http://schemas.android.com/tools"
    >
    <PreferenceCategory
        android:layout="@layout/preference_category_companion"
        android:title="@string/general">

        <ListPreference
            android:defaultValue="Linear"
            android:entries="@array/note_style_array"
            android:entryValues="@array/note_style_values"
            android:icon="@drawable/ic_line_style"
            android:key="note_style_key"
            android:title="@string/chose_note_style"
            app:useSimpleSummaryProvider="true" />
        <ListPreference
            android:defaultValue="HH:mm:ss - dd/MM/yyyy"
            android:entries="@array/time_format_array"
            android:entryValues="@array/time_format_values"
            android:key="time_format_key"
            android:icon="@drawable/ic_time"
            app:useSimpleSummaryProvider="true"
            android:title="@string/chose_time_format" />

    </PreferenceCategory>

    <PreferenceCategory
        android:layout="@layout/preference_category_companion"
        android:title="@string/theme_settings">

        <ListPreference
            android:defaultValue="blue"
            android:entries="@array/chose_theme_array"
            android:entryValues="@array/chose_theme_values"
            android:key="theme_key"
            android:icon="@drawable/ic_style"
            app:useSimpleSummaryProvider="true"
            android:title="@string/chose_theme" />

        <ListPreference
            android:defaultValue="stars"
            android:entries="@array/chose_background_array"
            android:entryValues="@array/chose_background_values"
            android:key="background_key"
            android:icon="@drawable/ic_style"
            app:useSimpleSummaryProvider="true"
            android:title="@string/background_selection" />
    </PreferenceCategory>

    <PreferenceCategory
        android:layout="@layout/preference_category_companion"
        android:title="@string/note_text_settings">

        <ListPreference
            android:defaultValue="20"
            android:entries="@array/text_size_array"
            android:entryValues="@array/text_size_values"
            android:key="title_size_key"
            android:icon="@drawable/ic_text"
            app:useSimpleSummaryProvider="true"
            android:title="@string/title_text_size" />
        <ListPreference
            android:defaultValue="18"
            android:entries="@array/text_size_array"
            android:entryValues="@array/text_size_values"
            android:key="content_size_key"
            android:icon="@drawable/ic_text"
            app:useSimpleSummaryProvider="true"
            android:title="@string/content_text_size" />
        <ListPreference
            android:defaultValue="18"
            android:entries="@array/text_size_array"
            android:entryValues="@array/text_size_values"
            android:key="comments_size_key"
            android:icon="@drawable/ic_text"
            app:useSimpleSummaryProvider="true"
            android:title="@string/comments_text_size" />
        <ListPreference
            android:defaultValue="sans-serif"
            android:entries="@array/font_family_array"
            android:entryValues="@array/font_family_values"
            android:key="font_family_title_key"
            android:title="@string/font_family_title"
            app:icon="@drawable/ic_font_family"
            app:useSimpleSummaryProvider="true" />
        <ListPreference
            android:defaultValue="sans-serif"
            android:entries="@array/font_family_array"
            android:entryValues="@array/font_family_values"
            android:key="font_family_content_key"
            android:title="@string/font_family_content"
            app:icon="@drawable/ic_font_family"
            app:useSimpleSummaryProvider="true" />
        <ListPreference
            android:defaultValue="sans-serif"
            android:entries="@array/font_family_array"
            android:entryValues="@array/font_family_values"
            android:key="font_family_comment_key"
            android:title="@string/font_family_comment"
            app:icon="@drawable/ic_font_family"
            app:useSimpleSummaryProvider="true" />
        <ListPreference
            android:defaultValue="sans-serif"
            android:entries="@array/font_family_array"
            android:entryValues="@array/font_family_values"
            android:key="font_family_list_key"
            android:title="@string/font_family_list"
            app:icon="@drawable/ic_font_family"
            app:useSimpleSummaryProvider="true" />
        <ListPreference
            android:defaultValue="sans-serif"
            android:entries="@array/font_family_array"
            android:entryValues="@array/font_family_values"
            android:key="font_family_button_key"
            android:title="@string/font_family_button"
            app:icon="@drawable/ic_font_family"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

</androidx.preference.PreferenceScreen>